@@ -167,7 +167,7 @@ public interface HttpClient extends Closeable, LifeCycle<HttpClient> {
                 Optional<O> body = response.getBody();
                 if (!body.isPresent() && response.getBody(byte[].class).isPresent()) {
                     throw new HttpClientResponseException(
-                            String.format("Failed to decode the body for the given content type [%s]", response.getContentType().orElse(null)),
+                    "Failed to decode the body for the given content type [%s]".formatted(response.getContentType().orElse(null)),
                             response
                     );
                 } else {
